--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,8 @@
 development:
   adapter: postgresql
   host: localhost
+  username: patrick
+
   database: db_sample_app
   pool: 5
   timeout: 5000
@@ -11,6 +13,7 @@ development:
 test:
   adapter: postgresql
   host: localhost
+  username: patrick
   database: db_sample_app
   pool: 5
   timeout: 5000
@@ -18,6 +21,7 @@ test:
 production:
   adapter: postgresql
   host: localhost
+  username: patrick
   database: db_sample_app
   pool: 5
   timeout: 5000
