--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ development:
   host: localhost
   username: patrick
 
-  database: db_sample_app
+#  database: db_sample_app
   pool: 5
   timeout: 5000
 
@@ -14,7 +14,7 @@ test:
   adapter: postgresql
   host: localhost
   username: patrick
-  database: db_sample_app
+ # database: db_sample_app
   pool: 5
   timeout: 5000
 
@@ -22,6 +22,6 @@ production:
   adapter: postgresql
   host: localhost
   username: patrick
-  database: db_sample_app
+  #database: db_sample_app
   pool: 5
   timeout: 5000
