--- a/config/database.yml
+++ b/config/database.yml
@@ -3,18 +3,18 @@ development:
   host: localhost
   username: patrick
 
-#  database: db_sample_app
+  database: db_sample_app_dev
   pool: 5
   timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   adapter: postgresql
   host: localhost
   username: patrick
- # database: db_sample_app
+  database: db_sample_app_test
   pool: 5
   timeout: 5000
 
@@ -22,6 +22,9 @@ production:
   adapter: postgresql
   host: localhost
   username: patrick
-  #database: db_sample_app
+  database: db_sample_app
   pool: 5
   timeout: 5000
+
+cucumber:
+  <<: *test
